# anprcloude

./: .env.example  .gitignore  DOCKER_SETUP.md  LICENSE  Makefile  README.md  docker-compose.nginx.yml  docker-compose.prod.yml  docker-compose.yml  update_todo.py
backend/: .env.example  .gitignore  Dockerfile  FILES_CREATED.md  Makefile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  init-db.sql  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 20251126_1940_001_add_settings_tables.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/api/endpoints/: cameras.py  exporters.py  models.py  plate_events.py  settings.py  settings_websocket.py  websocket.py  zones.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  camera.py  exporter.py  model.py  plate_event.py  zone.py
backend/app/routers/: __init__.py  config.py  events.py  exporters.py
backend/app/schemas/: __init__.py  camera.py  exporter.py  model.py  plate_event.py  zone.py
backend/app/services/: __init__.py  event_service.py
backend/tests/: __init__.py  test_health.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  INSTALLATION.md  TODO_SMART_SETTINGS_DASHBOARD.md
edge/: .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  STRUCTURE.md  __init__.py  config.py  docker-compose.yaml  main.py  pipeline.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
edge/config/: cameras.example.yaml  config.example.yaml  models.example.yaml
edge/detection/: __init__.py  detector.py  tracker.py
edge/exporters/: __init__.py  dispatcher.py
edge/gstreamer/: README.md  __init__.py  pipeline.py
edge/gstreamer/hailo-postprocess/: CMakeLists.txt  plate_crop.cpp  plate_detection.cpp  plate_ocr.cpp
edge/install/: QUICK_START.md  README.md  install_linux.sh  install_rpi_coral.sh  install_rpi_hailo.sh
edge/ocr/: __init__.py  ensemble.py  models.py
edge/scripts/: README.md  convert_onnx_to_hef.py
edge/tests/: __init__.py  test_detection.py
edge/worker/: __init__.py  backend_client.py  models.py  service.py
frontend/: .env.example  .env.local.example  next.config.js  package.json  tailwind.config.ts
frontend/components/dashboard/: StatsCards.tsx  SystemStatus.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/components/settings/: QuickSettings.tsx  SettingsHeader.tsx  SettingsRecommendations.tsx  SettingsSidebar.tsx  SystemOverview.tsx
frontend/components/ui/: table.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/cameras/: page.tsx
frontend/src/app/exporters/: page.tsx
frontend/src/app/models/: page.tsx
frontend/src/app/settings/: layout.tsx  page.tsx
frontend/src/app/zones/: page.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/hooks/: useSettingsWebSocket.ts  useWebSocket.ts
nginx/: nginx.conf
scripts/: backup-db.sh  init-db.sh  prometheus.yml  setup-dev.sh
